# 003_MAGNA

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Procfile  README.md  SECURITY.md  docker-compose.yml  manage.py  modify_project_files_for_heroku.py  mypy.ini  prepare_runtime.py  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  user_story.md
.github/TEMPLATES/: bugs.md  new_feature.md
.github/workflows/: deploy.yml  django.yml
.githubTEMPLATES/: bugs
features/: absence_request.feature  home.feature  login.feature  pto.feature  travel_auth.feature
features/steps/: BrowserInitSteps.py  HomeSteps.py  LoginSteps.py  TravelAuthSteps.py  steps.py
forms/: admin.py  apps.py  forms.py  models.py  tests.py  views.py
forms/migrations/: 0001_initial.py  0002_auto_20240211_1853.py  0003_absentdaysallowed.py  0004_alter_absencerequest_table_and_more.py  0005_absencerequest_clock_number.py  0006_alter_absencerequest_approval_status.py  0007_absencerequest_workflow_ids.py  0007_travelauthorization.py  0007_workorder.py  0008_alter_workorder_order_number.py  0009_jobpdfs.py  0010_absencerequest_email_address.py  0011_jobpdfs_date_created.py  0012_merge_20240325_1723.py  0013_alter_travelauthorization_airfare_and_more.py
forms/templates/: absence_request.html  calendar.html  create_job_postings.html  pto.html  requests.html  travel_auth.html  travel_auth_form.html  view_job_postings.html  work_order.html
forms/tests/: test_absence_request.py  test_job_postings.py  test_search_requests.py  test_travel_authorization.py  test_work_order.py
home/: apps.py  tests.py  views.py
home/templates/: base.html  home.html
login/: admin.py  apps.py  forms.py  models.py  tests.py  views.py
login/migrations/: 0001_initial.py  0002_alter_employee_options_alter_employee_managers_and_more.py  0003_auto_20240228_1856.py
login/templates/: login.html
login/tests/: test_employee.py
magna/: asgi.py  conftest.py  settings.py  urls.py  wsgi.py
management/: apps.py
templates/: home.html  login.html  pto.html
workflows/: apps.py  forms.py  models.py  tests.py  views.py
(+16 files in other folders)
