[tool.poetry]
name = "003-magna"
version = "0.1.0"
description = "Prototype Kiosk System for Magna International"
authors = ["teckenrod <treyeck2@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.1"
flake8 = "^7.0.0"
pre-commit = "^3.6.0"
tox = "^4.12.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
